<resources>
    <string name="app_name">Go Cart</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_me">Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="total">Total: </string>
    <string name="waiting_for_payment">Waiting For Payment</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="paypal">PayPal</string>
    <string name="go_pay">Google Pay</string>
    <string name="choose_address">Choose Address</string>
    <string name="sub_total">Sub Total</string>
    <string name="shipping_fees">Shipping Fees</string>
    <string name="coupon">Coupon</string>
    <string name="discount">Discount</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="address">Address</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="country">Country</string>
    <string name="street_name">Street Name</string>
    <string name="city">City</string>
    <string name="building_no_floor_apartment">Building no., Floor, Apartment</string>
    <string name="government">Government</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="continue_to_payment">Continue To Payment</string>
    <string name="checkout">checkout</string>
    <string name="your_cart_is_empty">Your cart is empty :(</string>
    <string name="egp">EGP</string>
    <string name="usd">USD</string>
    <string name="settings">Settings</string>
    <string name="your_addresses">Your Addresses</string>
    <string name="your_address">Your Address</string>
    <string name="add_an_address">Add an address</string>
    <string name="your_cart">Your Cart</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="confirm_payment">Confirm Your Order</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="please_login">Please Login To View Your Info</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="add_address">Add Address</string>
    <string name="check">Check</string>
    <string name="congratulations_payment_completed_successfully">Congratulations! Payment completed Successfully</string>
    <string name="success">Success</string>
    <string name="okay">Okay</string>
    <string name="log_in_to_see_your_shopping_cart">Log in to see your shopping cart</string>
    <string name="sign_in_register">Sign in / register</string>
    <string name="alertDeleteMessage">Do You Want To delete This product?</string>
    <string name="alertAddToCartMessage">Do You Want To Add This product to cart?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="total_price">Total Price:</string>
    <string name="order_date">Order Date:</string>
    <string name="login_to_see_your_wish_list">Login to see your Wish List</string>
    <string name="choose_your_language">Choose Your Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="save">Save</string>
    <string name="made_by">Made By</string>
    <string name="brands">Brands</string>
    <string name="hello">Hello</string>
    <string name="register_login">register/login</string>
    <string name="my_orders">My Orders</string>
    <string name="see_more">See more</string>
    <string name="wish_list">Wish List</string>
    <string name="description">Description</string>
    <string name="detail">Detail</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="choose_your_currency">Choose Your Currency</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="kids">Kids</string>
    <string name="sales">On Sales</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="register_unsuccessfull">Register Unsuccessful</string>
    <string name="added_to_cart">Added To Cart</string>
    <string name="added_to_wishlist">Added To Wish List</string>
    <string name="are_you_sure">Are you sure you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="your_wishlist">Your WishList</string>
    <string name="add_to_bag">add to bag</string>
    <string name="reviews">Reviews</string>
    <string name="add_new_address">Add New Address</string>
    <string name="search">Search</string>
    <string name="copied">Copied discount code</string>
    <string name="user_name">user name</string>
    <string name="confirm_password">confirm password</string>
    <string name="email_address">email address</string>



    <string-array name="spinner">
        <item>Show all</item>
        <item>Show By Type</item>
    </string-array>

</resources>